<resources>
    <!--Notification channel Done-->
    <string name="chan_done">CHANNEL_DONE</string>

    <string name="app_name">MovieApp</string>

    <!--Test Tags-->

    <!--Order section in MovieListScreen-->
    <string name="order_section">ORDER_SECTION</string>

    <!--Radio buttons in Order section-->
    <string name="Ascending">Ascending</string>
    <string name="Descending">Descending</string>

    <!--Movie item in movie list-->
    <string name="movie_item">MOVIE_ITEM</string>

    <!--TextField in Order section-->
    <string name="text_field">TEXT_FIELD</string>

    <!--Icon button to display Order section-->
    <string name="search">SEARCH</string>

    <!--Worker Manager Error Result key-->
    <string name="error_message">ERROR_MESSAGE</string>
    <!--WorkerManage input data keys-->
    <string name="url">URL</string>
    <string name="movie_id">MOVIE_ID</string>
    <string name="movie_name">MOVIE_NAME</string>

</resources>